--- a/Services/Product/ProductCommandAPI/Properties/launchSettings.json
+++ b/Services/Product/ProductCommandAPI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "ProductCommandAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7136;http://localhost:5053",
       "environmentVariables": {
