feat: added ProductQueryAPI database model

--- a/Services/Product/ProductQueryAPI/ProductQueryAPI.csproj
+++ b/Services/Product/ProductQueryAPI/ProductQueryAPI.csproj
@@ -9,12 +9,17 @@
 
     <ItemGroup>
         <PackageReference Include="Confluent.Kafka" Version="1.9.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.1">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Controllers" />
-      <Folder Include="Handlers" />
     </ItemGroup>
 
 </Project>
