--- a/Services/Product/ProductQueryAPI/appsettings.json
+++ b/Services/Product/ProductQueryAPI/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DB_HOST;Port=DB_PORT;Database=DB_NAME;User Id=DB_USER;Password=DB_PASS;"
+  },
   "Kafka": {
     "ProducerSettings": {
       "BootstrapServers": "localhost:9092"
