--- a/Services/Order/OrderCommandAPI/Properties/launchSettings.json
+++ b/Services/Order/OrderCommandAPI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "OrderCommandAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7299;http://localhost:5024",
       "environmentVariables": {
