--- a/Services/Order/OrderQueryAPI/OrderQueryAPI.csproj
+++ b/Services/Order/OrderQueryAPI/OrderQueryAPI.csproj
@@ -9,18 +9,20 @@
 
     <ItemGroup>
         <PackageReference Include="Confluent.Kafka" Version="1.9.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.1">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Consumers" />
       <Folder Include="Controllers" />
-      <Folder Include="Data" />
       <Folder Include="Handlers" />
       <Folder Include="Migrations" />
-      <Folder Include="Models" />
       <Folder Include="Repositories" />
-      <Folder Include="Utils" />
     </ItemGroup>
 
 </Project>
