--- a/Services/Order/OrderQueryAPI/Properties/launchSettings.json
+++ b/Services/Order/OrderQueryAPI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "OrderQueryAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7125;http://localhost:5180",
       "environmentVariables": {
