--- a/Services/Order/OrderCommandAPI/appsettings.json
+++ b/Services/Order/OrderCommandAPI/appsettings.json
@@ -14,6 +14,9 @@
       "BootstrapServers": "localhost:9092",
       "GroupId": "REPLACE_WITH_GROUP_NAME"
     },
-    "Topic": "REPLACE_WITH_TOPIC_NAME"
+    "Topic": {
+      "Order": "order",
+      "Product": "product"
+    }
   }
 }
