--- a/Services/Product/ProductQueryAPI/appsettings.json
+++ b/Services/Product/ProductQueryAPI/appsettings.json
@@ -17,6 +17,9 @@
       "BootstrapServers": "localhost:9092",
       "GroupId": "REPLACE_WITH_GROUP_NAME"
     },
-    "Topic": "REPLACE_WITH_TOPIC_NAME"
+    "Topic": {
+      "Order": "order",
+      "Product": "product"
+    }
   }
 }
