--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,16 @@
-version: '3.8'
+version: '3'
 services:
-  product_read_db:
-    image: postgres:15-alpine
-    restart: always
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+  zookeeper:
+    image: wurstmeister/zookeeper
     ports:
-      - '5432:1234'
+      - "2181:2181"
+  kafka:
+    image: wurstmeister/kafka
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
+      KAFKA_CREATE_TOPICS: "order:1:1,product:1:1"
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     volumes:
-      - db:/var/lib/postgresql/data
-volumes:
-  product_read_db:
-    driver: local
+      - /var/run/docker.sock:/var/run/docker.sock
